--- a/app/css/style.css
+++ b/app/css/style.css
@@ -197,14 +197,16 @@ body {
   position: fixed;
   top: 0px;
   left: 0px;
-  width: 100%;
+  width: 80%;
+  padding: 0 10%;
   height: 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 99;
 }
-.header a.btn-icon {
+.header .btn-icon {
   font-size: 1.8em;
   width: 80px;
   height: 80px;
@@ -214,7 +216,7 @@ body {
   align-items: center;
   text-decoration: none;
 }
-.header a.btn-icon:hover {
+.header .btn-icon:hover {
   color: #000000;
 }
 .header .title {
@@ -222,10 +224,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   color: #999999;
   font-family: 'maledpan';
   font-size: 2.4em;
+}
+.header .title i {
+  margin-right: 10px;
 }
 .header a.logo-icon {
   display: flex;
@@ -240,13 +245,16 @@ body {
 .container {
   width: 60%;
   margin: 5% 20%;
-  margin-top: 80px;
+  margin-top: 160px;
   float: left;
   display: block;
 }
 .container .box {
   display: flex;
   flex-direction: column;
+}
+.container .box:last-child .device-list {
+  border-bottom: 0;
 }
 .container .box .head {
   display: flex;
@@ -383,6 +391,7 @@ body {
 .form {
   width: 30%;
   margin: 80px 35%;
+  margin-top: 160px;
   display: flex;
   flex-direction: column;
 }
@@ -618,7 +627,10 @@ body {
   font-size: 7.199999999999999em;
   line-height: 1.2em;
   font-weight: bold;
-  color: #333333;
+  color: #2962ff;
+}
+.device-info .info .temperature-current.over {
+  color: #e74c3c;
 }
 .device-info .info p {
   font-size: 0.9em;
@@ -631,9 +643,19 @@ body {
   margin-bottom: 40px;
 }
 .device-info .temperature-stat .box {
-  flex-grow: 1;
-  padding: 1%;
+  width: 31.33%;
+  background: #dddddd;
   text-align: center;
+  margin-right: 3%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 7px;
+  box-sizing: border-box;
+}
+.device-info .temperature-stat .box:nth-child(3n+0) {
+  margin-right: 0%;
 }
 .device-info .temperature-stat .box h3 {
   font-family: 'maledpan';
@@ -645,14 +667,8 @@ body {
   font-size: 0.9em;
   color: #999999;
 }
-.device-info .temperature-stat .box.highest .v {
-  color: #333333;
-}
 .device-info .temperature-stat .box.highest .over {
   color: #e74c3c;
-}
-.device-info .temperature-stat .box.lowest .v {
-  color: #333333;
 }
 .device-info .temperature-stat .box.lowest .over {
   color: #e74c3c;
@@ -678,10 +694,9 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  border: 1px solid #EEEEEE;
   box-sizing: border-box;
   border-radius: 10px;
-  border: 1px solid #dddddd;
+  background: #dddddd;
 }
 .device-info .history .logitems {
   display: flex;
@@ -691,7 +706,7 @@ body {
   font-size: 1.2em;
   font-family: 'maledpan';
   color: #666666;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #bbbbbb;
 }
 .device-info .history .logitems:last-child {
   border-bottom: 0;
@@ -725,26 +740,26 @@ body {
 }
 .device-info .history .loading {
   width: 100%;
-  margin: 20% 0%;
-  float: left;
-  display: block;
-  text-align: center;
-  color: #333333;
-  font-size: 0.9em;
+  padding: 15% 0;
+  display: flex;
+  justify-content: center;
+  font-size: 1.2em;
+  font-style: italic;
+  color: #CCCCCC;
 }
 .device-info .history .empty {
   width: 100%;
-  margin: 20% 0%;
-  float: left;
-  display: block;
-  text-align: center;
-  color: #999999;
-  font-size: 0.9em;
+  padding: 15% 0;
+  display: flex;
+  justify-content: center;
+  color: #dddddd;
+  font-size: 1.2em;
+  font-style: italic;
 }
 .footer {
   width: 60%;
   margin: 0 20%;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
   color: #333333;
   display: flex;
   font-size: 0.9em;
@@ -862,8 +877,8 @@ body {
   width: 100%;
   height: 50px;
   display: flex;
-  background: #ff9800;
-  color: #4c2d00;
+  background: #dddddd;
+  color: #666666;
   font-family: 'maledpan';
   font-size: 1.2em;
   justify-content: center;
