--- a/app/less/style.less
+++ b/app/less/style.less
@@ -10,14 +10,16 @@
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	width: 100%;
+	width: 80%;
+	padding: 0 10%;
 	height: 80px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	background: rgba(255,255,255,0.9);
+	background: rgba(255,255,255,0.8);
+	z-index: 99;
 
-	a.btn-icon {
+	.btn-icon {
 		font-size: @fontsize_icon;
 		width: 80px;
 		height: 80px;
@@ -37,10 +39,14 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex-direction: column;
+		flex-direction: row;
 		color: #999999;
 		font-family: @font_family_topic;
 		font-size: @fontsize_topic;
+		
+		i {
+			margin-right: 10px;
+		}
 	}
 
 	a.logo-icon {
@@ -59,13 +65,19 @@
 .container{
 	width: 60%;
 	margin: 5% 20%;
-	margin-top: 80px;
+	margin-top: 160px;
 	float: left;
 	display: block;
 
 	.box {
 		display: flex;
 		flex-direction: column;
+
+		&:last-child {
+			.device-list {
+				border-bottom: 0;
+			}
+		}
 
 		.head {
 			display: flex;
@@ -220,6 +232,7 @@
 .form {
 	width: 30%;
 	margin: 80px 35%;
+	margin-top: 160px;
 	display: flex;
 	flex-direction: column;
 
@@ -489,7 +502,11 @@
 			font-size: @fontsize_topic * 3;
 			line-height: 1.2em;
 			font-weight: bold;
-			color: @text_color_normal;
+			color: @primary_color;
+
+			&.over {
+				color: @second_color;
+			}
 		}
 
 		p {
@@ -505,9 +522,20 @@
 		margin-bottom: 40px;
 
 		.box {
-			flex-grow: 1;
-			padding: 1%;
+			width: 31.33%;
+			background: @border_color;
 			text-align: center;
+			margin-right: 3%;
+			height: 150px;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			border-radius: 7px;
+			box-sizing: border-box;
+
+			&:nth-child(3n+0) {
+				margin-right: 0%;
+			}
 
 			h3 {
 				font-family: @font_family_topic;
@@ -521,11 +549,9 @@
 			}
 
 			&.highest {
-				.v { color: @text_color_normal; }
 				.over { color: @second_color; }
 			}
 			&.lowest {
-				.v { color: @text_color_normal; }
 				.over { color: @second_color; }
 			}
 		}
@@ -555,10 +581,9 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		border: 1px solid #EEEEEE;
 		box-sizing: border-box;
 		border-radius: 10px;
-		border: 1px solid @border_color;
+		background: @border_color;
 
 		.logitems {
 			display: flex;
@@ -568,7 +593,7 @@
 			font-size: @fontsize_normal;
 			font-family: @font_family_topic;
 			color: #666666;
-			border-bottom: 1px solid @border_color;
+			border-bottom: 1px solid @border_color_hover;
 
 			&:last-child {
 				border-bottom: 0;
@@ -610,22 +635,22 @@
 
 		.loading {
 			width: 100%;
-			margin: 20% 0%;
-			float: left;
-			display: block;
-			text-align: center;
-			color: @text_color_normal;
-			font-size: 0.9em;
+			padding: 15% 0;
+			display: flex;
+			justify-content: center;
+			font-size: @fontsize_normal;
+			font-style: italic;
+			color: #CCCCCC;
 		}
 
 		.empty {
 			width: 100%;
-			margin: 20% 0%;
-			float: left;
-			display: block;
-			text-align: center;
-			color: @text_color_light;
-			font-size: 0.9em;
+			padding: 15% 0;
+			display: flex;
+			justify-content: center;
+			color: @border_color;
+			font-size: @fontsize_normal;
+			font-style: italic;
 		}
 	}
 }
@@ -633,7 +658,7 @@
 .footer {
 	width: 60%;
 	margin: 0 20%;
-	margin-bottom: 5%;
+	margin-bottom: 2%;
 	color: @text_color_normal;
 	display: flex;
 	font-size: @fontsize_mini;
@@ -759,8 +784,8 @@
 	width: 100%;
 	height: 50px;
 	display: flex;
-	background: @third_color;
-	color: @third_color_dark;
+	background: @border_color;
+	color: #666666;
 	font-family: @font_family_topic;
 	font-size: @fontsize_normal;
 	justify-content: center;
