--- a/app/less/config.less
+++ b/app/less/config.less
@@ -33,18 +33,21 @@
 
 // @text_normal_color  :#111111;
 
-@text_color_normal: #333333;
-@text_color_light: #999999;
-@text_color_dark: #000000;
+@text_color_normal: #37474F;
+@text_color_light: #455A64;
+@text_color_dark: #263238;
 
 @icon_color_default: #999999;
 @icon_color_hover: #000000;
 
-@border_color: #DDDDDD;
-@border_color_hover: #BBBBBB;
+@border_color: #ECEFF1;
+@border_color_hover: #B0BEC5;
 
 @font-size-normal: 1.2em;
 @font-size-mini: 0.75em;
+
+@green_color: #00B900;
+@red_color: #eb4e3d;
 
 html {
     -ms-touch-action: manipulation;
@@ -66,23 +69,20 @@ body{
 // Freebie: Google Material Design Shadow Helper
 // https://medium.com/@Florian/freebie-google-material-design-shadow-helper-2a0501295a2d
 // by Florian Kutschera
-.boxShadow(@level:1){
-	@level:1;
-	& when (@level = 1) {
-		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	}
-	& when (@level = 2) {
-		box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-	}
-	& when (@level = 3) {
-		box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-	}
-	& when (@level = 4) {
-		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-	}
-	& when (@level = 5) {
-		box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-	}
+.BoxShadowHelper(@level) when (@level = 1) {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.BoxShadowHelper(@level) when (@level = 2) {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.BoxShadowHelper(@level) when (@level = 3) {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.BoxShadowHelper(@level) when (@level = 4) {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.BoxShadowHelper(@level) when (@level = 5) {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 @-webkit-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
@@ -98,13 +98,10 @@ body{
 .bounce{
     -webkit-animation-name: bounce;
     animation-name: bounce;
-
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
-
     -webkit-animation-delay: 1s;
     animation-delay: 1s;
-
     -webkit-animation-iteration-count:infinite;
     animation-iteration-count:infinite;
 }
@@ -117,8 +114,8 @@ body{
 }
 
 .transitionAnimation(@s){
-    transition:all @s ease-in-out;
-    -moz-transition:all @s ease-in-out;
-    -webkit-transition:all @s ease-in-out;
-    -o-transition:all @s ease-in-out;
+    transition: all @s ease-in-out;
+    -moz-transition: all @s ease-in-out;
+    -webkit-transition: all @s ease-in-out;
+    -o-transition: all @s ease-in-out;
 }
