--- a/app/less/style.less
+++ b/app/less/style.less
@@ -5,47 +5,50 @@
 @fontsize_topic: 2.4em;
 @fontsize_normal: 1.2em;
 @fontsize_icon: 1.8em;
+@header_height: 80px;
 
 .header {
-	position: fixed;
-	top: 0px;
-	left: 0px;
 	width: 80%;
 	padding: 0 10%;
-	height: 80px;
+	height: @header_height;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	background: rgba(255,255,255,0.8);
 	z-index: 99;
+	background: @bg_color;
 
 	.btn-icon {
 		font-size: @fontsize_icon;
-		width: 80px;
-		height: 80px;
+		width: @header_height;
+		height: @header_height;
 		color: @icon_color_default;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		text-decoration: none;
 
-		&:hover {
-			color: @icon_color_hover;
+		&.create {
+			color: @primary_color;
 		}
 	}
 
 	.title {
-		height: 80px;
+		height: @header_height;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: row;
-		color: #999999;
+		color: @text_color_normal;
 		font-family: @font_family_topic;
 		font-size: @fontsize_topic;
+		font-weight: bold;
 		
 		i {
 			margin-right: 10px;
+		}
+
+		&:hover {
+			cursor: default;
 		}
 	}
 
@@ -56,8 +59,8 @@
 		margin-right: auto;
 
 		img {
-			height: 60px;
 			padding: 10px;
+			height: @header_height - (10px * 2);
 		}
 	}
 }
@@ -65,7 +68,7 @@
 .container{
 	width: 60%;
 	margin: 5% 20%;
-	margin-top: 160px;
+	margin-top: @header_height;
 	float: left;
 	display: block;
 
@@ -95,9 +98,8 @@
 				text-decoration: none;
 				height: 50px;
 				width: 50px;
-				color: @primary_color;
+				color: @text_color_light;
 				font-size: @fontsize_normal;
-				background: #E3F2FD;
 				margin-left: 7px;
 				display: flex;
 				justify-content: center;
@@ -109,8 +111,7 @@
 				}
 
 				&:hover {
-					background: @primary_color;
-					color: #FFFFFF;
+					color: @text_color_normal;
 				}
 			}
 		}
@@ -133,8 +134,9 @@
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
-				background: #DDDDDD;
+				background: @border_color;
 				color: #999999;
+				.BoxShadowHelper(2);
 
 				&.create-button {
 					background: #FFFFFF;
@@ -189,7 +191,7 @@
 				}
 
 				&.disable {
-					background: #E3F2FD;
+					background: @border_color;
 					color: #2962FF;
 					box-shadow: none;
 				}
@@ -221,8 +223,8 @@
 				}
 		
 				&.lostconnect {
-					background: #DDDDDD;
-					color: #999999;
+					background: @border_color;
+					color: @border_color_hover;
 				}
 			}
 		}
@@ -232,7 +234,7 @@
 .form {
 	width: 30%;
 	margin: 80px 35%;
-	margin-top: 160px;
+	margin-top: @header_height;
 	display: flex;
 	flex-direction: column;
 
@@ -320,7 +322,7 @@
 			display: block;
 			font-size: @fontsize_normal;
 			padding: 14px;
-			background: #FAFAFA;
+			background: @border_color;
 			color: @primary_color;
 			margin: 0%;
 			border-radius: 5px;
@@ -338,7 +340,7 @@
 			}
 
 			&:focus {
-				border: 2px solid @primary_color;
+				border: 2px solid @border_color_hover;
 			}
 
 			&:disabled {
@@ -365,6 +367,7 @@
 			color: @bg_color;
 			font-size: @fontsize_normal;
 			font-weight: bold;
+			.BoxShadowHelper(2);
 
 			i {
 				margin-left: 10px;
@@ -487,7 +490,7 @@
 .device-info{
 	width: 40%;
 	margin: 80px 30%;
-	margin-top: 120px;
+	margin-top: @header_height;
 	display: flex;
 	flex-direction: column;
 
@@ -532,6 +535,7 @@
 			justify-content: center;
 			border-radius: 7px;
 			box-sizing: border-box;
+			.BoxShadowHelper(2);
 
 			&:nth-child(3n+0) {
 				margin-right: 0%;
@@ -584,6 +588,7 @@
 		box-sizing: border-box;
 		border-radius: 10px;
 		background: @border_color;
+		.BoxShadowHelper(2);
 
 		.logitems {
 			display: flex;
