--- a/app/less/config.less
+++ b/app/less/config.less
@@ -34,11 +34,8 @@
 // @text_normal_color  :#111111;
 
 @text_color_normal: #37474F;
-@text_color_light: #455A64;
+@text_color_light: #B0BEC5;
 @text_color_dark: #263238;
-
-@icon_color_default: #999999;
-@icon_color_hover: #000000;
 
 @border_color: #ECEFF1;
 @border_color_hover: #B0BEC5;
@@ -102,8 +99,8 @@ body{
     animation-duration: 1s;
     -webkit-animation-delay: 1s;
     animation-delay: 1s;
-    -webkit-animation-iteration-count:infinite;
-    animation-iteration-count:infinite;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
 }
 
 // Animation of Textarea
