--- a/app/less/style.less
+++ b/app/less/style.less
@@ -21,7 +21,7 @@
 		font-size: @fontsize_icon;
 		width: @header_height;
 		height: @header_height;
-		color: @icon_color_default;
+		color: @text_color_light;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -44,7 +44,7 @@
 		font-weight: bold;
 		
 		i {
-			margin-right: 10px;
+			margin-right: 15px;
 		}
 
 		&:hover {
@@ -136,12 +136,18 @@
 				justify-content: center;
 				background: @border_color;
 				color: #999999;
+				.transitionAnimation(0.3s);
 				.BoxShadowHelper(2);
+
+				&:hover {
+					.BoxShadowHelper(3);
+					transform: translateY(-10px);
+				}
 
 				&.create-button {
 					background: #FFFFFF;
-					border: 2px dashed @border_color;
-					color: @border_color;
+					border: 2px dashed @border_color_hover;
+					color: @border_color_hover;
 					font-size: @fontsize_normal;
 					align-items: center;
 					box-shadow: none;
@@ -151,8 +157,7 @@
 					}
 
 					&:hover {
-						border: 2px dashed @border_color_hover;
-						color: @border_color_hover;
+						transform: initial;
 					}
 				}
 
@@ -232,11 +237,20 @@
 }
 
 .form {
-	width: 30%;
-	margin: 80px 35%;
+	width: 40%;
+	margin: 80px 30%;
 	margin-top: @header_height;
 	display: flex;
 	flex-direction: column;
+
+	&.vertical-center {
+		justify-content: center;
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		margin: 0 30%;
+	}
 
 	&.login {
 		justify-content: center;
@@ -290,6 +304,10 @@
 			display: none;
 		}
 
+		&:last-child {
+			margin-bottom: 0;
+		}
+
 		label {
 			font-size: @fontsize_mini;
 			color: @text_color_normal;
@@ -321,7 +339,7 @@
 			float: left;
 			display: block;
 			font-size: @fontsize_normal;
-			padding: 14px;
+			padding: 16px 14px;
 			background: @border_color;
 			color: @primary_color;
 			margin: 0%;
@@ -330,7 +348,7 @@
 			border: 2px solid @border_color;
 			resize: none;
 			
-			&.-loading {
+			&.loading {
 				background: transparent;
 				color: @primary_color;
 			}
@@ -355,11 +373,9 @@
 
 		.btn-submit {
 			width: 100%;
-			float: left;
-			display: block;
 			font-size: @fontsize_normal;
 			border: 0px;
-			padding: 14px;
+			padding: 16px 0;
 			margin: 0%;
 			margin-top: 15px;
 			border-radius: 5px;
@@ -382,6 +398,11 @@
 			&.loading {
 				background: #DDDDDD;
 				color: #999999;
+				box-shadow: none;
+			}
+
+			&.completed {
+				background: @green_color;
 				box-shadow: none;
 			}
 		}
@@ -527,8 +548,8 @@
 		.box {
 			width: 31.33%;
 			background: @border_color;
-			text-align: center;
 			margin-right: 3%;
+			padding: 0 5%;
 			height: 150px;
 			display: flex;
 			flex-direction: column;
@@ -597,8 +618,8 @@
 			padding: 15px 25px;
 			font-size: @fontsize_normal;
 			font-family: @font_family_topic;
-			color: #666666;
-			border-bottom: 1px solid @border_color_hover;
+			color: @text_color_normal;
+			border-bottom: 1px dotted @border_color_hover;
 
 			&:last-child {
 				border-bottom: 0;
@@ -630,7 +651,7 @@
 				width: 5%;
 				text-align: right;
 				font-size: @fontsize_normal * 0.5;
-				color: @border_color;
+				color: @border_color_hover;
 			}
 			.temp {
 				width: 20%;
