--- a/app/less/config.less
+++ b/app/less/config.less
@@ -26,7 +26,7 @@
 @third_color_light  :#ffcb7f; // Lost Color
 
 // http://www.color-hex.com/color/040d14
-@bg_color           :#FFFFFF;
+@bg_color           :#FAFAFA;
 @bg_color_dark      :#030a10;
 @bg_color_light     :#1d252b;
 @text_active_color  :#000000;
