--- a/app/less/style.less
+++ b/app/less/style.less
@@ -527,6 +527,7 @@
 			line-height: 1.2em;
 			font-weight: bold;
 			color: @primary_color;
+			text-shadow: 0 6px 9px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
 			&.over {
 				color: @second_color;
